report implementation and co2 query

--- a/app/src/main/res/layout/activity_admin_home.xml
+++ b/app/src/main/res/layout/activity_admin_home.xml
@@ -18,7 +18,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="5dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginBottom="5dp"
         android:background="@color/bodyTextColor"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
@@ -40,35 +40,38 @@
         <Button
             android:id="@+id/QueryButton"
             android:layout_width="match_parent"
-            android:layout_height="116dp"
+            android:layout_height="0dp"
             android:layout_marginStart="5dp"
             android:layout_marginTop="64dp"
             android:layout_marginEnd="5dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="1"
             android:background="@color/design_default_color_on_secondary"
             android:backgroundTint="@color/black"
             android:text="@string/btn_calibrate" />
 
         <Button
-            android:id="@+id/RCButton"
+            android:id="@+id/RsButton"
             android:layout_width="match_parent"
-            android:layout_height="116dp"
+            android:layout_height="0dp"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="1"
             android:background="@color/design_default_color_on_secondary"
             android:backgroundTint="@color/black"
             android:text="@string/btn_recordmain" />
 
         <Button
-            android:id="@+id/RSButton"
+            android:id="@+id/RdButton"
             android:layout_width="match_parent"
-            android:layout_height="116dp"
+            android:layout_height="0dp"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="1"
             android:background="@color/design_default_color_on_secondary"
             android:backgroundTint="@color/black"
             android:text="@string/btn_recordmain2" />
@@ -76,11 +79,12 @@
         <Button
             android:id="@+id/RPButton"
             android:layout_width="match_parent"
-            android:layout_height="116dp"
+            android:layout_height="0dp"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
-            android:layout_marginBottom="116dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="1"
             android:background="@color/design_default_color_on_secondary"
             android:backgroundTint="@color/black"
             android:text="@string/btn_reportview" />
