--- a/app/src/main/res/layout/activity_calibration.xml
+++ b/app/src/main/res/layout/activity_calibration.xml
@@ -168,7 +168,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:gravity="center"
-                            android:text="@string/txt_stepcounter"
+                            android:text="@string/str_personcounter"
                             android:textStyle="bold" />
                     </LinearLayout>
 
