--- a/app/src/main/res/layout/activity_rduactivity.xml
+++ b/app/src/main/res/layout/activity_rduactivity.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/_0bd2c4aaec549a68d590e27"
     tools:context=".data.RDUActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -51,14 +52,14 @@
 
             <Switch
                 android:id="@+id/disp_switch"
-                android:layout_width="180dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="@string/sw_report_device" />
 
             <Spinner
                 android:id="@+id/disp_spinner"
-                android:layout_width="249dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
         </LinearLayout>
@@ -78,20 +79,105 @@
 
             <Switch
                 android:id="@+id/date_switch"
-                android:layout_width="142dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="@string/sw_report_date" />
 
             <EditText
                 android:id="@+id/date_dt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="@color/white"
                 android:ems="10"
                 android:inputType="date" />
 
         </LinearLayout>
+
+        <TableLayout
+            android:id="@+id/tableLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
+
+            <TableRow>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="4"
+                    android:background="@color/teal_700"
+                    android:gravity="center_horizontal"
+
+                    android:padding="10sp"
+                    android:text="@string/str_device"
+                    android:textColor="@color/buttonTextColor"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="4"
+                    android:background="@color/teal_700"
+                    android:gravity="center_horizontal"
+
+                    android:padding="10sp"
+                    android:text="@string/str_datetime"
+                    android:textColor="@color/buttonTextColor"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="4"
+                    android:background="@color/teal_700"
+                    android:gravity="center_horizontal"
+
+                    android:padding="10sp"
+                    android:text="@string/str_co2"
+                    android:textColor="@color/buttonTextColor"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="4"
+                    android:background="@color/teal_700"
+                    android:gravity="center_horizontal"
+
+                    android:padding="10sp"
+                    android:text="@string/str_dist"
+                    android:textColor="@color/buttonTextColor"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="4"
+                    android:background="@color/teal_700"
+                    android:gravity="center_horizontal"
+
+                    android:padding="10sp"
+                    android:text="@string/str_stepcounter"
+                    android:textColor="@color/buttonTextColor"
+                    android:textSize="10sp" />
+
+
+            </TableRow>
+
+        </TableLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/tableRecycler"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/BackButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
 
         <Button
             android:id="@+id/BackButton"
@@ -105,92 +191,5 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <ScrollView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="5dp"
-            app:layout_constraintBottom_toTopOf="@+id/BackButton"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
-
-            <TableLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginEnd="0dp"
-                android:layout_marginBottom="0dp">
-
-                <TableRow>
-
-                    <TextView
-                        android:layout_width="10dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="4"
-                        android:background="@color/teal_700"
-                        android:gravity="center_horizontal"
-
-                        android:padding="10sp"
-                        android:text="@string/str_device"
-                        android:textColor="@color/buttonTextColor"
-                        android:textSize="10sp" />
-
-                    <TextView
-                        android:layout_width="10dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="4"
-                        android:background="@color/teal_700"
-                        android:gravity="center_horizontal"
-
-                        android:padding="10sp"
-                        android:text="@string/str_datetime"
-                        android:textColor="@color/buttonTextColor"
-                        android:textSize="10sp" />
-
-                    <TextView
-                        android:layout_width="10dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="4"
-                        android:background="@color/teal_700"
-                        android:gravity="center_horizontal"
-
-                        android:padding="10sp"
-                        android:text="@string/str_co2"
-                        android:textColor="@color/buttonTextColor"
-                        android:textSize="10sp" />
-
-                    <TextView
-                        android:layout_width="10dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="4"
-                        android:background="@color/teal_700"
-                        android:gravity="center_horizontal"
-
-                        android:padding="10sp"
-                        android:text="@string/str_dist"
-                        android:textColor="@color/buttonTextColor"
-                        android:textSize="10sp" />
-
-                    <TextView
-                        android:layout_width="10dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="4"
-                        android:background="@color/teal_700"
-                        android:gravity="center_horizontal"
-
-                        android:padding="10sp"
-                        android:text="@string/str_stepcounter"
-                        android:textColor="@color/buttonTextColor"
-                        android:textSize="10sp" />
-
-
-                </TableRow>
-
-            </TableLayout>
-        </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
